--- a/index.html
+++ b/index.html
@@ -5,12 +5,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WeBuy | Home</title>
     <link rel="stylesheet" href="/dist/css/styles.css">
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="fifth navbar example">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">WeBuy</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
+                <div class="collapse navbar-collapse" id="navbarsExample05">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="profile/login/">Log in</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="profile/register/">Register</a>
+                        </li>
+                    </ul>
+                    <form role="search">
+                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <div class="homepage-header">
+            <img src="/images/header.jpg" alt="a phone displaying the WeBuy logo on top of a computer">
+        </div>
+    </header>
+    <main>
+        <div class="container-fluid">
+            <p>Please register or login to bid</p>
+            <div class="homepage-buttons flex justify-content-center space-between">
+                <div>
+                    <a href="#"> <button>REGISTER</button></a>
+                </div>
+                <div>
+                    <a href="#"><button>LOG IN</button></a>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="browse">
+            <h1>BROWSE</h1>
+            !--Carousel--!
+
+            <a href="#">View More</a>
+        </div>
+    </main>
+    <footer>© 2023 WeBuy, Inc</footer>
 </body>
 
 </html>
