--- a/index.html
+++ b/index.html
@@ -43,26 +43,69 @@
         </div>
     </header>
     <main>
-        <div class="container-fluid">
+        <div class="container homepage-text">
             <p>Please register or login to bid</p>
-            <div class="homepage-buttons flex justify-content-center space-between">
-                <div>
-                    <a href="#"> <button>REGISTER</button></a>
-                </div>
-                <div>
-                    <a href="#"><button>LOG IN</button></a>
-                </div>
+            <div class="homepage-buttons">
+                <a href="#">
+                    <button class="btn btn-dark mx-4" type="submit">REGISTER</button>
+                </a>
+                <a href="#">
+                    <button class="btn  btn-dark mx-4" type="submit">LOG IN</button>
+                </a>
             </div>
         </div>
         <hr>
         <div class="browse">
             <h1>BROWSE</h1>
-            !--Carousel--!
 
-            <a href="#">View More</a>
+            <div id="homeCarousel" class="carousel slide" data-ride="carousel">
+
+                <ol class="carousel-indicators">
+                    <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#homeCarousel" data-slide-to="1"></li>
+                    <li data-target="#homeCarousel" data-slide-to="2"></li>
+                </ol>
+
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="#">
+                    </div>
+
+                    <div class="item">
+                        <img src="#">
+                    </div>
+
+                    <div class="item">
+                        <img src="#">
+                    </div>
+                </div>
+
+                <!-- Left and right controls-->
+                <a class="left carousel-control" href="#homeCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#homeCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+            <div class="view-more">
+                <a href="#">View More</a>
+            </div>
         </div>
     </main>
-    <footer>© 2023 WeBuy, Inc</footer>
+    <div class="container">
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Register</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Login</a></li>
+            </ul>
+            <p class="text-center text-muted">© 2023 WeBuy, Inc</p>
+        </footer>
+    </div>
 </body>
 
 </html>
