--- a/profile/index.html
+++ b/profile/index.html
@@ -29,7 +29,16 @@
                             <a class="nav-link" href="profile/register/">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="profile/login/">Log In</a>
+                            <a class="nav-link" href="#">Log In</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                                aria-expanded="false">Dropdown</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
                         </li>
                     </ul>
                     <form role="search">
@@ -100,8 +109,8 @@
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-                <li class="nav-item"><a href="/profile/register/" class="nav-link px-2 text-muted">Register</a></li>
-                <li class="nav-item"><a href="/profile/login/" class="nav-link px-2 text-muted">Log in</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Register</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Login</a></li>
             </ul>
             <p class="text-center text-muted">© 2023 WeBuy, Inc</p>
         </footer>
