made some changes to the links

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="profile/register/">Register</a>
+                            <a class="nav-link" href="/profile/register/">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="profile/login/">Log In</a>
+                            <a class="nav-link" href="/profile/login/">Log In</a>
                         </li>
                     </ul>
                     <form role="search">
@@ -46,10 +46,10 @@
         <div class="container homepage-text">
             <p>Please register or login to bid</p>
             <div class="homepage-buttons">
-                <a href="#">
+                <a href="/profile/register/">
                     <button class="btn btn-dark mx-4" type="submit">REGISTER</button>
                 </a>
-                <a href="#">
+                <a href="/profile/login/">
                     <button class="btn  btn-dark mx-4" type="submit">LOG IN</button>
                 </a>
             </div>
