--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeBuy | Register</title>
+    <title>WeBuy | Log in</title>
     <link rel="stylesheet" href="/dist/css/styles.css">
 </head>
 
@@ -27,10 +27,10 @@
                             ">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/profile/register/">Register</a>
+                            <a class="nav-link" href="/profile/register/">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/profile/login/">Log In</a>
+                            <a class="nav-link active" href="/profile/login/">Log In</a>
                         </li>
                     </ul>
                     <form role="search">
@@ -42,20 +42,15 @@
 
     </header>
     <main>
-        <h1>REGISTER</h1>
+        <h1>LOG IN</h1>
 
-        <div class="container col-xl-10 col-xxl-8 px-4 py-5 register-hero">
+        <div class="container col-xl-10 col-xxl-8 px-4 py-5 login-hero">
             <div class="row align-items-center g-lg-5 py-5">
                 <div class="col-md-10 mx-auto col-lg-5">
                     <div class="login-logo">
                         <img class="mb-5" src="/images/transparentlogo.png" alt="WeBuy logo">
                     </div>
                     <form class="p-4 p-md-5 border rounded-3 bg-light">
-                        <div class="form-floating mb-3">
-                            <input required type="text" class="form-control" id="registerName" name="name"
-                                placeholder="YourName">
-                            <label for="registerName">Name</label>
-                        </div>
                         <div class="form-floating mb-3">
                             <input required type="email" class="form-control" id="floatingInput" name="email"
                                 pattern="[\w\-.]+@(stud.)?noroff.no$"
@@ -68,19 +63,13 @@
                                 name="password" placeholder="password">
                             <label for="floatingPassword">Password</label>
                         </div>
-                        <div class="form-floating mb-3">
-                            <input required type="url" class="form-control" id="registerAvatar" name="avatar"
-                                placeholder="Avatar URL">
-                            <label for="floatingInput">Avatar URL</label>
-                        </div>
                         <div class="checkbox mb-3">
                             <label>
                                 <input type="checkbox" value="remember-me"> Remember me
                             </label>
                         </div>
-                        <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
                         <hr class="my-4">
-                        <button class="w-100 btn btn-lg btn-dark" type="submit">Sign up</button>
+                        <button class="w-100 btn btn-lg btn-dark" type="submit">Sign in</button>
 
                     </form>
                 </div>
@@ -92,8 +81,8 @@
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="../../index.html" class="nav-link px-2 text-muted">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Register</a></li>
-                <li class="nav-item"><a href="/profile/login/" class="nav-link px-2 text-muted">Login</a></li>
+                <li class="nav-item"><a href="/profile/register/" class="nav-link px-2 text-muted">Register</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Login</a></li>
             </ul>
             <p class="text-center text-muted">© 2023 WeBuy, Inc</p>
         </footer>
