Added js script to the HTML files

--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -50,7 +50,7 @@
                     <div class="login-logo">
                         <img class="mb-5" src="/images/transparentlogo.png" alt="WeBuy logo">
                     </div>
-                    <form class="p-4 p-md-5 border rounded-3 bg-light">
+                    <form class="p-4 p-md-5 border rounded-3 bg-light" id="registerForm">
                         <div class="form-floating mb-3">
                             <input required type="text" class="form-control" id="registerName" name="name"
                                 placeholder="YourName">
@@ -98,6 +98,8 @@
             <p class="text-center text-muted">© 2023 WeBuy, Inc</p>
         </footer>
     </div>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/src/js/index.mjs"></script>
 </body>
 
 </html>
