--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
             <p class="text-center text-muted">© 2023 WeBuy, Inc</p>
         </footer>
     </div>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/src/js/index.mjs"></script>
 </body>
 
 </html>
