--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -51,11 +51,15 @@
                         <img class="mb-5" src="/images/transparentlogo.png" alt="WeBuy logo">
                     </div>
                     <form class="p-4 p-md-5 border rounded-3 bg-light" id="registerForm">
+
                         <div class="form-floating mb-3">
                             <input required type="text" class="form-control" id="registerName" name="name"
+                                pattern="^[\w]+$" maxlength="20"
+                                title="Username can only contain lowercase and uppercase letters, numbers and underscore. Example: My_Username123"
                                 placeholder="YourName">
                             <label for="registerName">Name</label>
                         </div>
+
                         <div class="form-floating mb-3">
                             <input required type="email" class="form-control" id="floatingInput" name="email"
                                 pattern="[\w\-.]+@(stud.)?noroff.no$"
@@ -63,21 +67,25 @@
                                 placeholder="yourEmail@stud.noroff.no">
                             <label for="floatingInput">Email</label>
                         </div>
+
                         <div class="form-floating mb-3">
                             <input required type="password" minlength="8" class="form-control" id="floatingPassword"
                                 name="password" placeholder="password">
                             <label for="floatingPassword">Password</label>
                         </div>
+
                         <div class="form-floating mb-3">
-                            <input required type="url" class="form-control" id="registerAvatar" name="avatar"
+                            <input type="url" class="form-control" id="registerAvatar" name="avatar"
                                 placeholder="Avatar URL">
                             <label for="floatingInput">Avatar URL</label>
                         </div>
+
                         <div class="checkbox mb-3">
                             <label>
                                 <input type="checkbox" value="remember-me"> Remember me
                             </label>
                         </div>
+
                         <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
                         <hr class="my-4">
                         <button class="w-100 btn btn-lg btn-dark" type="submit">Sign up</button>
@@ -99,7 +107,7 @@
         </footer>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/src/js/index.mjs"></script>
+    <script src="/src/js/index.mjs" type="module"></script>
 </body>
 
 </html>
