Created the login function in JS

--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -50,7 +50,7 @@
                     <div class="login-logo">
                         <img class="mb-5" src="/images/transparentlogo.png" alt="WeBuy logo">
                     </div>
-                    <form class="p-4 p-md-5 border rounded-3 bg-light">
+                    <form class="p-4 p-md-5 border rounded-3 bg-light" id="loginForm">
                         <div class="form-floating mb-3">
                             <input required type="email" class="form-control" id="floatingInput" name="email"
                                 pattern="[\w\-.]+@(stud.)?noroff.no$"
@@ -88,7 +88,7 @@
         </footer>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/src/js/index.mjs"></script>
+    <script src="/src/js/index.mjs" type="module"></script>
 </body>
 
 </html>
