--- a/profile/index.html
+++ b/profile/index.html
@@ -26,17 +26,17 @@
                             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Listings</a>
+                            <a class="nav-link" href="../listings/">Listings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">New Listing</a>
+                            <a class="nav-link" href="../listing/create/">New Listing</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
                                 aria-expanded="false">Profile</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">View Profile</a></li>
-                                <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+                                <li><a class="dropdown-item" href="../profile/">View Profile</a></li>
+                                <li><a class="dropdown-item" href="../profile/edit/">Edit Profile</a></li>
                                 <li><a class="dropdown-item" href="#">Log out</a></li>
                             </ul>
                         </li>
@@ -72,13 +72,15 @@
     <div class="container">
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Register</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Login</a></li>
+                <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="../listings/" class="nav-link px-2 text-muted">Listings</a></li>
+                <li class="nav-item"><a href="../listing/create/" class="nav-link px-2 text-muted">New Listing</a></li>
             </ul>
             <p class="text-center text-muted">© 2023 WeBuy, Inc</p>
         </footer>
     </div>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/src/js/index.mjs"></script>
 </body>
 
 </html>
