--- a/listing/index.html
+++ b/listing/index.html
@@ -26,7 +26,7 @@
                             <a class="nav-link " aria-current="page" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../listings/">Listings</a>
+                            <a class="nav-link " href="../listings/">Listings</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../listing/create/">New Listing</a>
