changed title., added containers

--- a/listing/index.html
+++ b/listing/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeBuy | Home</title>
+    <title>WeBuy | Listing</title>
     <link rel="stylesheet" href="/dist/css/styles.css">
 </head>
 
@@ -52,6 +52,17 @@
     <main>
         <div class="container-fluid">
             <div class="listing" id="listing">Loading...</div>
+            <div class="imgContainer row text-center">
+                <h3 class="productImageHeader">Product images</h3>
+            </div>
+            <hr>
+            <div class="bidContainer text-center">
+                <h3>Bids</h3>
+            </div>
+            <hr>
+            <div class="sellerContainer text-center">
+                <h3 class="m-5">Seller:</h3>
+            </div>
         </div>
         </div>
         </div>
