--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -26,7 +26,7 @@
                             <a class="nav-link " aria-current="page" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../listings/">Listings</a>
+                            <a class="nav-link" href="../../listings/">Listings</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="../listing/create/">New Listing</a>
@@ -65,10 +65,9 @@
                                         <input class="form-control" type="text" name="title" required maxLength="30">
                                     </div>
 
-                                    <!--Maybe make this a calendar??-->
                                     <div class="form-group mb-3">
                                         <label for="endsAt">Ends at</label>
-                                        <input class="form-control" name="endsAt" required>
+                                        <input class="form-control" type="datetime-local" name="endsAt" required>
                                     </div>
 
                                     <div class="form-group mb-3">
@@ -78,15 +77,18 @@
 
                                     <div class="form-group mb-3">
                                         <label for="media">Media</label>
-                                        <input class="form-control" type="url" name="media">
+                                        <div id="mediaInputs">
+                                            <input class="form-control" type="url" name="media[]">
+                                        </div>
                                     </div>
+                                    <button class="btn btn-dark" id="addMoreBtn" type="button">Add more</button>
 
                                     <div class="form-group mb-3">
                                         <label for="tags">Tags</label>
                                         <input class="form-control" type="text" name="tags">
                                     </div>
 
-                                    <button class="w-30 btn btn-lg btn-dark">Create Listing</button>
+                                    <button class="w-30 btn btn-lg btn-dark" type="submit">Create Listing</button>
 
 
                                 </form>
