--- a/listing/index.html
+++ b/listing/index.html
@@ -61,17 +61,19 @@
                 <form id="addBid">
                     <div class="form-group mb-3">
                         <label for="">Bid</label>
-                        <input class="form-control w-50 mx-auto" type="number" name="bid"
+                        <input class="form-control w-50 mx-auto" id="bidInput" type="number" name="bid"
                             placeholder="Add your bid here" required maxlength="1">
                     </div>
-                    <button class="w-30 btn btn-dark">Add bid</button>
+                    <button class="w-30 btn btn-dark" id="bidBtn">Add bid</button>
                 </form>
             </div>
             <hr>
             <div class="bidContainer text-center w-50">
                 <h3>Bids</h3>
             </div>
-
+            <div class=" text-center">
+                <button class="btn btn-dark" id="showMore" type="button">Show more</button>
+            </div>
             <hr>
             <div class="sellerContainer text-center">
                 <h3 class="m-5">Seller:</h3>
