--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -54,7 +54,7 @@
             <h1>New Listing</h1>
             <div class="row">
                 <div class="col-lg-12 mt-5">
-                    <div class="card">
+                    <div class="card createlisting">
                         <div class="card-body mb-4">
                             <div class="w-100">
 
@@ -72,7 +72,7 @@
 
                                     <div class="form-group mb-3">
                                         <label for="description">Description</label>
-                                        <textarea class="form-control" name="description" required></textarea>
+                                        <textarea class="form-control" name="description"></textarea>
                                     </div>
 
                                     <div class="form-group mb-3">
