trying to add edit-listing button

--- a/listing/index.html
+++ b/listing/index.html
@@ -52,6 +52,10 @@
     <main>
         <div class="container-fluid w-75">
             <div class="listing" id="listing">Loading...</div>
+            <div class="text-center" id="edit-button">
+                <a href="/listing/edit/"><button class="btn btn-dark" id="editBtn">Edit Listing</button></a>
+            </div>
+            <hr>
             <div class="imgContainer row text-center">
                 <h3 class="productImageHeader">Product images</h3>
             </div>
@@ -64,7 +68,7 @@
                         <input class="form-control w-50 mx-auto" id="bidInput" type="number" name="bid"
                             placeholder="Add your bid here" required maxlength="1">
                     </div>
-                    <button class="w-30 btn btn-dark" id="bidBtn">Add bid</button>
+                    <button class="w-30 btn" id="bidBtn">Add bid</button>
                 </form>
             </div>
             <hr>
