--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="../../listings/">Listings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../listing/create/">New Listing</a>
+                            <a class="nav-link" href="/listing/create/">New Listing</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
@@ -41,9 +41,6 @@
                             </ul>
                         </li>
                     </ul>
-                    <form role="search">
-                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                    </form>
                 </div>
             </div>
         </nav>
@@ -89,6 +86,9 @@
                                     </div>
 
                                     <button class="w-30 btn btn-lg btn-dark" id="update-btn" type="submit">Update
+                                        Listing</button>
+
+                                    <button class="w-30 btn btn-lg" id="delete-btn" type="submit">Delete
                                         Listing</button>
 
 
