--- a/profile/index.html
+++ b/profile/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WeBuy | Home</title>
+    <title>WeBuy | Profile</title>
     <link rel="stylesheet" href="/dist/css/styles.css">
 </head>
 
@@ -80,7 +80,7 @@
         </footer>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/src/js/index.mjs"></script>
+    <script src="/src/js/index.mjs" type="module"></script>
 </body>
 
 </html>
