removed deadline from update-form

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -63,11 +63,6 @@
                                     </div>
 
                                     <div class="form-group mb-3">
-                                        <label for="endsAt">Ends at</label>
-                                        <input class="form-control" type="datetime-local" name="endsAt" required>
-                                    </div>
-
-                                    <div class="form-group mb-3">
                                         <label for="description">Description</label>
                                         <textarea class="form-control" name="description"></textarea>
                                     </div>
@@ -88,7 +83,7 @@
                                     <button class="w-30 btn btn-lg btn-dark" id="update-btn" type="submit">Update
                                         Listing</button>
 
-                                    <button class="w-30 btn btn-lg" id="delete-btn" type="submit">Delete
+                                    <button class="w-30 btn btn-lg" id="removeBtn" type="submit">Delete
                                         Listing</button>
 
 
