--- a/listing/index.html
+++ b/listing/index.html
@@ -37,7 +37,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="../profile/">View Profile</a></li>
                                 <li><a class="dropdown-item" href="../profile/edit/">Edit Profile</a></li>
-                                <li><a class="dropdown-item" href="#">Log out</a></li>
+                                <li><a class="dropdown-item logout" href="#">Log out</a></li>
                             </ul>
                         </li>
                     </ul>
