--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -26,17 +26,17 @@
                             <a class="nav-link " aria-current="page" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../listings/">Listings</a>
+                            <a class="nav-link" href="/listings/">Listings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../listing/create/">New Listing</a>
+                            <a class="nav-link active" href="/listing/create/">New Listing</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
                                 aria-expanded="false">Profile</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../profile/">View Profile</a></li>
-                                <li><a class="dropdown-item" href="../profile/edit/">Edit Profile</a></li>
+                                <li><a class="dropdown-item" href="/profile/">View Profile</a></li>
+                                <li><a class="dropdown-item" href="/profile/edit/">Edit Profile</a></li>
                                 <li><a class="dropdown-item logout" href="#">Log out</a></li>
                             </ul>
                         </li>
