fixed the delete-button

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -83,7 +83,7 @@
                                     <button class="w-30 btn btn-lg btn-dark" id="update-btn" type="submit">Update
                                         Listing</button>
 
-                                    <button class="w-30 btn btn-lg" id="removeBtn" type="submit">Delete
+                                    <button class="w-30 btn btn-lg" id="removeBtn" type="button">Delete
                                         Listing</button>
 
 
