--- a/listings/index.html
+++ b/listings/index.html
@@ -47,8 +47,10 @@
                             </ul>
                         </li>
                     </ul>
-                    <form role="search">
-                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                    <form role="search" id="search">
+                        <input class="form-control" minlength="3" name="term" type="search" placeholder="Search"
+                            aria-label="Search" id="searchInput">
+                        <button class="btn btn-dark">Search</button>
                     </form>
                 </div>
             </div>
