--- a/index.html
+++ b/index.html
@@ -20,32 +20,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarsExample05">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-                        </li>
-                        <li class="nav-item" id="unauth">
-                            <a class="nav-link" href="/profile/register/">Register</a>
-                        </li>
-                        <li class="nav-item" id="unauth">
-                            <a class="nav-link" href="/profile/login/">Log In</a>
-                        </li>
-                        <li class="nav-item" id="unauth">
-                            <a class="nav-link" href="/listings/">Listings</a>
-                        </li>
-                        <li class="nav-item" id="auth">
-                            <a class="nav-link" href="/listing/create/">New listing</a>
-                        </li>
-                        <li class="nav-item dropdown" id="auth">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
-                                aria-expanded="false">Profile</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/profile/">View Profile</a></li>
-                                <li><a class="dropdown-item" href="/profile/edit/">Edit Profile</a></li>
-                                <li><a class="dropdown-item logout" href="#">Log out</a></li>
-                            </ul>
-                        </li>
+                <div class="collapse navbar-collapse " id="navbarsExample05">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-menu">
+
                     </ul>
                 </div>
             </div>
@@ -55,25 +32,17 @@
         </div>
     </header>
     <main>
-        <div class="container homepage-text" id="unauth">
-            <p>Please register or login to bid</p>
-            <div class="homepage-buttons">
-                <a href="/profile/register/">
-                    <button class="btn btn-home mx-4" type="submit">REGISTER</button>
-                </a>
-                <a href="/profile/login/">
-                    <button class="btn  btn-home mx-4" type="submit">LOG IN</button>
-                </a>
-            </div>
+        <div class="container homepage-text">
+
         </div>
         <hr>
         <div class="browse">
             <h1>BROWSE</h1>
-
             <div class="container marketing">
 
                 <!-- columns of text -->
                 <div class="row" id="featured">
+                    <div class="loader"></div>
                 </div>
 
                 <div class="view-more">
