started the profilepages

--- a/profile/index.html
+++ b/profile/index.html
@@ -37,7 +37,7 @@
             <div class="d-flex justify-content-between align-items-start p-3">
                 <div class="user text-center">
 
-                    <div class="profile">
+                    <div class="profile" id="profile">
                     </div>
                 </div>
 
