added a header for listings

--- a/profile/index.html
+++ b/profile/index.html
@@ -46,7 +46,9 @@
                     <div class="text-center profile-info">
                     </div>
                     <hr>
-                    <div class="profile-listings px-3" id="profileListings">
+                    <h2>Listings</h2>
+                    <div class="profile-listings px-3 row" id="profileListings">
+
                     </div>
                 </div>
             </div>
