minor class-changes

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -63,11 +63,14 @@
                                         <input class="form-control" type="text" name="tags">
                                     </div>
 
-                                    <button class="w-30 btn btn-lg btn-dark" id="update-btn" type="submit">Update
-                                        Listing</button>
+                                    <div class="edit-buttons">
 
-                                    <button class="w-30 btn btn-lg" id="removeBtn" type="button">Delete
-                                        Listing</button>
+                                        <button class="w-30 btn btn-lg btn-dark" id="update-btn" type="submit">Update
+                                            Listing</button>
+
+                                        <button class="w-30 btn btn-lg" id="removeBtn" type="button">Delete
+                                            Listing</button>
+                                    </div>
 
 
                                 </form>
