--- a/profile/index.html
+++ b/profile/index.html
@@ -47,7 +47,7 @@
                     </div>
                     <hr>
                     <h2>Listings</h2>
-                    <div class="profile-listings px-3 row" id="profileListings">
+                    <div class="profile-listings row" id="profileListings">
 
                     </div>
                 </div>
