--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Create your own listing to sell on WeBuy here">
     <title>WeBuy | Create Listing</title>
-    <link rel="stylesheet" href="./dist/css/styles.css">
+    <link rel="stylesheet" href="/dist/css/styles.css">
 </head>
 
 <body>
@@ -95,8 +95,8 @@
             <p class="text-center text-muted">© 2023 WeBuy, Inc</p>
         </footer>
     </div>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./src/js/index.mjs" type="module"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/src/js/index.mjs" type="module"></script>
 </body>
 
 </html>
