--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Log in to WeBuy here">
     <title>WeBuy | Log in</title>
-    <link rel="stylesheet" href="./dist/css/styles.css">
+    <link rel="stylesheet" href="/dist/css/styles.css">
 </head>
 
 <body>
@@ -76,8 +76,8 @@
             <p class="text-center text-muted">© 2023 WeBuy, Inc</p>
         </footer>
     </div>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./src/js/index.mjs" type="module"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/src/js/index.mjs" type="module"></script>
 </body>
 
 </html>
